# ChessCPP

./: CMakeLists.txt  DOCUMENTACION.md  README.md
docs/: Jugada.md  Motor.md  ProtocoloUCI.md  Tabla_transposicion.md  Tablero.md  calculadoraMovesAlfil.md  calculadoraMovesTorre.md  codigo_auxiliar.md  constantes.md  operaciones_bit.md  piezas.md
include/: Alfil.h  Caballo.h  Dama.h  Jugada.h  Motor.h  Peon.h  Pieza.h  ProtocoloUCI.h  Rey.h  TablaTrans.h  Tabla_transposicion.h  Tablero.h  Torre.h  calculadoraMovesAlfil.h  calculadoraMovesTorre.h  codigo_auxiliar.h  constantes.h  operaciones_bit.h  slidingPiece.h
src/: Alfil.cpp  Caballo.cpp  Dama.cpp  Jugada.cpp  Motor.cpp  Peon.cpp  ProtocoloUCI.cpp  Rey.cpp  TablaTrans.cpp  Tabla_transposicion.cpp  Tablero.cpp  Torre.cpp  calculadoraMovesAlfil.cpp  calculadoraMovesTorre.cpp  codigo_auxiliar.cpp  constantes.cpp  main.cpp  operaciones_bit.cpp  slidingPiece.cpp
test/: CMakeLists.txt  main.cpp
